feat: company job posting and view implementation
